hphp/hack/test/typecheck/await_as_an_expression/await_as_an_expression_pipe.php.exp
ERROR: File "await_as_an_expression_pipe.php", line 11, characters 17-25:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
